--- a/06-heroes-app/package.json
+++ b/06-heroes-app/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "ng": "ng",
     "backend": "json-server --watch data/db.json",
-    "start": "ng serve",
+    "start": "npm run backend && ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
