--- a/06-heroes-app/package.json
+++ b/06-heroes-app/package.json
@@ -5,7 +5,7 @@
     "ng": "ng",
     "backend": "json-server --watch data/db.json",
     "start": "ng serve",
-    "start:all": "npm run backend && npm start",
+    "start:all": "concurrently \"npm run backend\" \"npm start\"",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
@@ -31,6 +31,7 @@
     "@angular/cli": "~15.0.4",
     "@angular/compiler-cli": "^15.0.0",
     "@types/jasmine": "~4.3.0",
+    "concurrently": "^8.2.1",
     "jasmine-core": "~4.5.0",
     "json-server": "^0.17.1",
     "karma": "~6.4.0",
