--- a/06-heroes-app/package.json
+++ b/06-heroes-app/package.json
@@ -24,16 +24,16 @@
     "@angular/router": "^15.0.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.12.0"
+    "zone.js": "~0.12.0",
+    "concurrently": "^8.2.1",
+    "json-server": "^0.17.1"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^15.0.4",
     "@angular/cli": "~15.0.4",
     "@angular/compiler-cli": "^15.0.0",
     "@types/jasmine": "~4.3.0",
-    "concurrently": "^8.2.1",
     "jasmine-core": "~4.5.0",
-    "json-server": "^0.17.1",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.2.0",
