--- a/06-heroes-app/package.json
+++ b/06-heroes-app/package.json
@@ -5,8 +5,10 @@
     "ng": "ng",
     "backend": "json-server --watch data/db.json",
     "start": "ng serve",
-    "start:all": "concurrently \"npm run backend\" \"npm start\"",
+    "start:prod": "ng serve --prod",
+    "start:all": "concurrently \"npm run backend\" \"npm run start:prod\"",
     "build": "ng build",
+    "build:prod": "ng build --prod",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
