--- a/04-countries-app/package.json
+++ b/04-countries-app/package.json
@@ -3,10 +3,11 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "dev": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "start": "serve docs -s -n -L -p $PORT"
   },
   "private": true,
   "dependencies": {
