--- a/06-heroes-app/package.json
+++ b/06-heroes-app/package.json
@@ -4,9 +4,10 @@
   "scripts": {
     "ng": "ng",
     "backend": "json-server --watch data/db.json",
-    "start": "ng serve",
+    "dev": "ng serve",
+    "start": "serve dist/country-app -s -n -L -p $PORT",
     "start:prod": "ng serve --configuration production",
-    "start:all": "concurrently \"npm run backend\" \"npm run start:prod\"",
+    "start:all": "concurrently \"npm run backend\" \"npm run start\"",
     "build": "ng build",
     "build:prod": "ng build --configuration production",
     "watch": "ng build --watch --configuration development",
@@ -24,11 +25,12 @@
     "@angular/platform-browser": "^15.0.0",
     "@angular/platform-browser-dynamic": "^15.0.0",
     "@angular/router": "^15.0.0",
-    "rxjs": "~7.5.0",
-    "tslib": "^2.3.0",
-    "zone.js": "~0.12.0",
     "concurrently": "^8.2.1",
-    "json-server": "^0.17.1"
+    "json-server": "^0.17.1",
+    "rxjs": "~7.5.0",
+    "serve": "^14.2.1",
+    "tslib": "^2.3.0",
+    "zone.js": "~0.12.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^15.0.4",
